crates/math-core/tests/snapshots/conversion_test__bigl_pipe.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\bigl| x \\bigr|"
---
<math>
    <mo stretchy="true" form="prefix" symmetric="true" minsize="1.2em" maxsize="1.2em">|</mo>
    <mi>x</mi>
    <mo stretchy="true" form="postfix" symmetric="true" minsize="1.2em" maxsize="1.2em">|</mo>
</math>
