crates/math-core/tests/snapshots/conversion_test__bigm_close_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "2+\\bigm()"
---
<math>
    <mn>2</mn>
    <mo lspace="0" rspace="0">+</mo>
    <mo lspace="0.2778em" rspace="0" minsize="1.2em" maxsize="1.2em">(</mo>
    <mo stretchy="false">)</mo>
</math>
