crates/math-core/tests/snapshots/conversion_test__bigm_subscript_before_letter.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\bigm|_2 y"
---
<math>
    <mi>x</mi>
    <msub>
        <mo stretchy="true" form="infix" symmetric="true" minsize="1.2em" maxsize="1.2em">|</mo>
        <mn>2</mn>
    </msub>
    <mi>y</mi>
</math>
