crates/math-core/tests/snapshots/conversion_test__black_board_font.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathbb{R}"
---
<math>
    <mi>ℝ</mi>
</math>
