crates/math-core/tests/snapshots/conversion_test__bra_and_ket.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\bra{\\uparrow} + \\ket{\\downarrow}y"
---
<math>
    <mi>x</mi>
    <mo stretchy="false">⟨</mo>
    <mo stretchy="false" lspace="0" rspace="0">↑</mo>
    <mo stretchy="false" form="postfix">|</mo>
    <mo>+</mo>
    <mo stretchy="false" form="prefix">|</mo>
    <mo stretchy="false" lspace="0" rspace="0">↓</mo>
    <mo stretchy="false">⟩</mo>
    <mi>y</mi>
</math>
